fix: changed color to white for better contrast

--- a/public/css/skeleton.css
+++ b/public/css/skeleton.css
@@ -128,7 +128,7 @@ body {
   line-height: 1.6;
   font-weight: 400;
   font-family: "DM Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #222; }
+  color: #C9D1D9 /*#222*/ }
 
 
 /* Typography
